--- a/.htaccess
+++ b/.htaccess
@@ -8,10 +8,10 @@
 </FilesMatch>
 
 # Don't show directory listings for URLs which map to a directory.
-Options -Indexes
+# Options -Indexes
 
 # Follow symbolic links in this directory.
-Options +FollowSymLinks
+# Options +FollowSymLinks
 
 # Make Drupal handle any 404 errors.
 ErrorDocument 404 /index.php
@@ -24,15 +24,15 @@ DirectoryIndex index.php index.html index.htm
 # includes/bootstrap.inc for settings that can be changed at runtime.
 
 # PHP 5, Apache 1 and 2.
-<IfModule mod_php5.c>
-  php_flag magic_quotes_gpc                 off
-  php_flag magic_quotes_sybase              off
-  php_flag register_globals                 off
-  php_flag session.auto_start               off
-  php_value mbstring.http_input             pass
-  php_value mbstring.http_output            pass
-  php_flag mbstring.encoding_translation    off
-</IfModule>
+#<IfModule mod_php5.c>
+#  php_flag magic_quotes_gpc                 off
+#  php_flag magic_quotes_sybase              off
+#  php_flag register_globals                 off
+#  php_flag session.auto_start               off
+#  php_value mbstring.http_input             pass
+#  php_value mbstring.http_output            pass
+#  php_flag mbstring.encoding_translation    off
+#</IfModule>
 
 # Requires mod_expires to be enabled.
 <IfModule mod_expires.c>
@@ -53,7 +53,7 @@ DirectoryIndex index.php index.html index.htm
 </IfModule>
 
 # Various rewrite rules.
-<IfModule mod_rewrite.c>
+# <IfModule mod_rewrite.c>
   RewriteEngine on
 
   # Block access to "hidden" directories whose names begin with a period. This
@@ -95,7 +95,7 @@ DirectoryIndex index.php index.html index.htm
   #
   # If your site is running in a VirtualDocumentRoot at http://example.com/,
   # uncomment the following line:
-  # RewriteBase /
+  RewriteBase /dev
 
   # Pass all requests not referring directly to files in the filesystem to
   # index.php. Clean URLs are handled in drupal_environment_initialize().
@@ -128,4 +128,4 @@ DirectoryIndex index.php index.html index.htm
       Header append Vary Accept-Encoding
     </FilesMatch>
   </IfModule>
-</IfModule>
+#</IfModule>
